docs/apache-airflow-providers-amazon/9.4.0/_sources/_api/airflow/providers/amazon/aws/operators/lambda_function/index.rst.txt
airflow.providers.amazon.aws.operators.lambda_function
======================================================

.. py:module:: airflow.providers.amazon.aws.operators.lambda_function


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.lambda_function.LambdaCreateFunctionOperator
   airflow.providers.amazon.aws.operators.lambda_function.LambdaInvokeFunctionOperator


Module Contents
---------------

.. py:class:: LambdaCreateFunctionOperator(*, function_name, runtime = None, role, handler = None, code, description = None, timeout = None, config = None, wait_for_completion = False, waiter_max_attempts = 60, waiter_delay = 15, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.lambda_function.LambdaHook`\ ]


   Creates an AWS Lambda function.

   More information regarding parameters of this operator can be found here
   https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/lambda.html#Lambda.Client.create_function

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:LambdaCreateFunctionOperator`

   :param function_name: The name of the AWS Lambda function, version, or alias.
   :param runtime: The identifier of the function's runtime. Runtime is required if the deployment package
       is a .zip file archive.
   :param role: The Amazon Resource Name (ARN) of the function's execution role.
   :param handler: The name of the method within your code that Lambda calls to run your function.
       Handler is required if the deployment package is a .zip file archive.
   :param code: The code for the function.
   :param description: A description of the function.
   :param timeout: The amount of time (in seconds) that Lambda allows a function to run before stopping it.
   :param config: Optional dictionary for arbitrary parameters to the boto API create_lambda call.
   :param wait_for_completion: If True, the operator will wait until the function is active.
   :param waiter_max_attempts: Maximum number of attempts to poll the creation.
   :param waiter_delay: Number of seconds between polling the state of the creation.
   :param deferrable: If True, the operator will wait asynchronously for the creation to complete.
       This implies waiting for creation complete. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)
   :param aws_conn_id: The AWS connection ID to use


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: ui_color
      :value: '#ff7300'



   .. py:attribute:: function_name


   .. py:attribute:: runtime
      :value: None



   .. py:attribute:: role


   .. py:attribute:: handler
      :value: None



   .. py:attribute:: code


   .. py:attribute:: description
      :value: None



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: config


   .. py:attribute:: wait_for_completion
      :value: False



   .. py:attribute:: waiter_delay
      :value: 15



   .. py:attribute:: waiter_max_attempts
      :value: 60



   .. py:attribute:: deferrable
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None)


.. py:class:: LambdaInvokeFunctionOperator(*, function_name, log_type = None, keep_empty_log_lines = True, qualifier = None, invocation_type = None, client_context = None, payload = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.lambda_function.LambdaHook`\ ]


   Invokes an AWS Lambda function.

   You can invoke a function synchronously (and wait for the response), or asynchronously.
   To invoke a function asynchronously, set `invocation_type` to `Event`. For more details,
   review the boto3 Lambda invoke docs.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:LambdaInvokeFunctionOperator`

   :param function_name: The name of the AWS Lambda function, version, or alias.
   :param log_type: Set to Tail to include the execution log in the response and task logs.
       Otherwise, set to "None". Applies to synchronously invoked functions only,
       and returns the last 4 KB of the execution log.
   :param keep_empty_log_lines: Whether or not keep empty lines in the execution log.
   :param qualifier: Specify a version or alias to invoke a published version of the function.
   :param invocation_type: AWS Lambda invocation type (RequestResponse, Event, DryRun)
   :param client_context: Data about the invoking client to pass to the function in the context object
   :param payload: JSON provided as input to the Lambda function
   :param aws_conn_id: The AWS connection ID to use


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: ui_color
      :value: '#ff7300'



   .. py:attribute:: function_name


   .. py:attribute:: payload
      :value: None



   .. py:attribute:: log_type
      :value: None



   .. py:attribute:: keep_empty_log_lines
      :value: True



   .. py:attribute:: qualifier
      :value: None



   .. py:attribute:: invocation_type
      :value: None



   .. py:attribute:: client_context
      :value: None



   .. py:method:: execute(context)

      Invoke the target AWS Lambda function from Airflow.

      :return: The response payload from the function, or an error object.



